--- a/mods.html
+++ b/mods.html
@@ -529,6 +529,9 @@
         <li>
             <strong>Missing Lampposts Fix</strong>
         </li>
+	<li>
+            <strong>Pre-light Night Lights</strong>
+        </li>
         <li>
             <strong>Project Immerse-Yourself v0.3</strong>
         </li>
