--- a/mods.html
+++ b/mods.html
@@ -2039,7 +2039,7 @@
             <strong>Burned Peds</strong>
         </li>
         <li>
-            <strong>Busy Pedestrians (Peds Events Project) v10.01.2025</strong>
+            <strong>Busy Pedestrians (Peds Events Project) Update (01.03.2025)</strong>
         </li>
         <li>
             <strong>Busy Pedestrians mod</strong>
