--- a/mods.html
+++ b/mods.html
@@ -2001,7 +2001,7 @@
             <strong>weapon pickup</strong>
         </li>
 	<li>
-            <strong>Weapon Pickup Maker v(1/3/2025)</strong>
+            <strong>Weapon Pickup Maker Update (1/3/2025)</strong>
         </li>
         <li>
             <strong>Weapon Zoom Unlimited</strong>
