--- a/mods.html
+++ b/mods.html
@@ -1288,6 +1288,9 @@
 	<li>
             <strong>Wind noise at high speeds</strong>
         </li>
+	<li>
+            <strong>WorkingHorn</strong>
+        </li>
         <li>
             <strong>Worn Brake Pad Sound</strong>
         </li>
