--- a/mods.html
+++ b/mods.html
@@ -1067,6 +1067,9 @@
 	<li>
             <strong>Lock Car Doors</strong>
         </li>
+	<li>
+            <strong>Luxury Cars Attract The Attention Of Pedestrians</strong>
+        </li>
         <li>
             <strong>Manual Driveby Refixed Update v.25.02.12</strong>
         </li>
