--- a/mods.html
+++ b/mods.html
@@ -1593,7 +1593,7 @@
             <strong>HeadSetRadio</strong>
         </li>
         <li>
-            <strong>Health Recovery And Blood Screen</strong>
+            <strong>Health Recovery And Blood Screen v4.1</strong>
         </li>
         <li>
             <strong>Heli Cam Lock</strong>
