--- a/mods.html
+++ b/mods.html
@@ -622,7 +622,7 @@
             <strong>Disable Radar On Foot</strong>
         </li>
         <li>
-            <strong>Enterable Hidden Interiors Update v16/2/2025</strong>
+            <strong>Enterable Hidden Interiors Update (04/03/25)</strong>
         </li>
         <li>
             <strong>Explosions</strong>
