--- a/mods.html
+++ b/mods.html
@@ -1065,6 +1065,9 @@
             <strong>Lean On The Bike</strong>
         </li>
 	<li>
+            <strong>Lock And Park</strong>
+        </li>
+	<li>
             <strong>Lock Car Doors</strong>
         </li>
 	<li>
