--- a/mods.html
+++ b/mods.html
@@ -1527,7 +1527,7 @@
             <strong>Enhanced Jetpack</strong>
         </li>
         <li>
-            <strong>Faster animation of sellers</strong>
+            <strong>Faster animation of sellers (11.03.2025)</strong>
         </li>
         <li>
             <strong>Fireman Fireproof Fix</strong>
