--- a/mods.html
+++ b/mods.html
@@ -1527,7 +1527,7 @@
             <strong>Enhanced Jetpack</strong>
         </li>
         <li>
-            <strong>Faster animation of sellers (11.03.2025)</strong>
+            <strong>Faster animation of sellers Update (11.03.2025)</strong>
         </li>
         <li>
             <strong>Fireman Fireproof Fix</strong>
@@ -1716,7 +1716,7 @@
             <strong>More Radar Icons</strong>
         </li>
         <li>
-            <strong>News papers v2.1</strong>
+            <strong>News papers v2.1 Update (11.03.2025)</strong>
         </li>
         <li>
             <strong>Night Pimpin</strong>
