--- a/mods.html
+++ b/mods.html
@@ -1503,7 +1503,7 @@
             <strong>Driver</strong>
         </li>
         <li>
-            <strong>Drop Weapons Like In GTA IV</strong>
+            <strong>Drop Weapons Like In GTA IV v3.1</strong>
         </li>
         <li>
             <strong>Drug Dealer Fix</strong>
