--- a/mods.html
+++ b/mods.html
@@ -1164,7 +1164,7 @@
             <strong>Real Traffic Fix</strong>
         </li>
         <li>
-            <strong>Rear Lights Mod v3.4 Update 11.03.2025</strong>
+            <strong>Rear Lights Mod v3.4 Update (11.03.2025)</strong>
         </li>
         <li>
             <strong>Remote Lock Car</strong>
