--- a/mods.html
+++ b/mods.html
@@ -622,7 +622,7 @@
             <strong>Disable Radar On Foot</strong>
         </li>
         <li>
-            <strong>Enterable Hidden Interiors Update (11.03.25)</strong>
+            <strong>Enterable Hidden Interiors Update (11.03.25) v.2</strong>
         </li>
         <li>
             <strong>Explosions</strong>
