--- a/mods.html
+++ b/mods.html
@@ -1830,7 +1830,7 @@
             <strong>Rusty Brown's Ring Donuts</strong>
         </li>
 	<li>
-            <strong>RZL-Trainer</strong>
+            <strong>RZL-Trainer v5.B3</strong>
         </li>
         <li>
             <strong>SA Homies Mod</strong>
