--- a/mods.html
+++ b/mods.html
@@ -175,7 +175,7 @@
             <strong>Real Skybox v1.3.4</strong>
         </li>
         <li>
-            <strong>ReShade 6.3.3</strong>
+            <strong>ReShade v6.4.1</strong>
         </li>
 	<li>
             <strong>RGGSA2.0 ENB</strong>
