--- a/mods.html
+++ b/mods.html
@@ -151,7 +151,7 @@
             <strong>Enhance ParticleTXD v1.0</strong>
         </li>
         <li>
-            <strong>GraphicsTweaker v1.3</strong>
+            <strong>Graphics Tweaker v1.3.1</strong>
         </li>
         <li>
             <strong>IMFX v17.11.2017t</strong>
@@ -160,13 +160,13 @@
             <strong>Improved Streaming v1.0.1</strong>
         </li>
         <li>
-            <strong>Mobile Font Fixed</strong>
-        </li>
-        <li>
-            <strong>Mobile Hud</strong>
+            <strong>Mobile Font Fixed v1.0.1</strong>
         </li>
         <li>
             <strong>NextGen and Combat FX Plus</strong>
+        </li>
+        <li>
+            <strong>Project2DFX v4.4</strong>
         </li>
         <li>
             <strong>SA.Project2DFX v4.4</strong>
@@ -181,31 +181,13 @@
             <strong>RGGSA2.0 ENB</strong>
         </li>
         <li>
-            <strong>Shadows Settings Extender v2.1.2</strong>
+            <strong>SA Mobile Hud v2.01.1</strong>
         </li>
         <li>
             <strong>SkyGfx Extended v1.7</strong>
         </li>
         <li>
             <strong>SkyGrad</strong>
-        </li>
-        <li>
-            <strong>FxsFuncs v1.1b47</strong>
-        </li>
-        <li>
-            <strong>Dynamic Shadow Color v1.0</strong>
-        </li>
-        <li>
-            <strong>ECG – Enhanced Classic Graphics v16/10/19</strong>
-        </li>
-        <li>
-            <strong>ENB Series Auto Toggle</strong>
-        </li>
-	<li>
-            <strong>Enhanced Classic Graphics v1.2</strong>
-        </li>
-	<li>
-            <strong>SAMP Graphic Restore</strong>
         </li>
     </ul>
     <div class="button-container" style="text-align: center;">
