--- a/mods.html
+++ b/mods.html
@@ -951,7 +951,7 @@
             <strong>Doherty Garage v1.4.5</strong>
         </li>
         <li>
-            <strong>DrIVe Mod</strong>
+            <strong>DrIVe Mod Update (14.03.2025)</strong>
         </li>
         <li>
             <strong>Dynamic Motorway Traffic</strong>
