--- a/mods.html
+++ b/mods.html
@@ -1362,7 +1362,7 @@
             <strong>Airplane Tire Skid  v1.1</strong>
         </li>
         <li>
-            <strong>Ammunition Seller</strong>
+            <strong>Ammunition Seller v2.0</strong>
         </li>
         <li>
             <strong>Anim Train</strong>
