--- a/mods.html
+++ b/mods.html
@@ -1983,7 +1983,7 @@
             <strong>Weapon Dealer</strong>
         </li>
         <li>
-            <strong>Weapon Detaills</strong>
+            <strong>Weapon Detaills v3.1</strong>
         </li>
         <li>
             <strong>weapon pickup</strong>
