--- a/mods.html
+++ b/mods.html
@@ -1667,6 +1667,9 @@
         <li>
             <strong>Lamppost Insects</strong>
         </li>
+	<li>
+            <strong>Lampposts FX</strong>
+        </li>
         <li>
             <strong>Leviathan</strong>
         </li>
