--- a/mods.html
+++ b/mods.html
@@ -1031,6 +1031,9 @@
         <li>
             <strong>Improved Garages</strong>
         </li>
+	<li>
+            <strong>Improved Handling</strong>
+        </li>
         <li>
             <strong>ImVehFt</strong>
         </li>
