--- a/mods.html
+++ b/mods.html
@@ -696,6 +696,9 @@
         <li>
             <strong>Multiplemarkers</strong>
         </li>
+	<li>
+            <strong>NoMoreDeletedSaves</strong>
+        </li>
         <li>
             <strong>Open Door Anim</strong>
         </li>
