--- a/mods.html
+++ b/mods.html
@@ -754,7 +754,7 @@
             <strong>Sprint Everywhere</strong>
         </li>
         <li>
-            <strong>Starry Skies</strong>
+            <strong>Starry Skies v1.3.0</strong>
         </li>
 	<li>
             <strong>Story Mode 2.0 Bug Fixes</strong>
