--- a/mods.html
+++ b/mods.html
@@ -693,6 +693,9 @@
         <li>
             <strong>MovingMoonSA</strong>
         </li>
+	<li>
+            <strong>MovingSirenLightsSA</strong>
+        </li>
         <li>
             <strong>Multiplemarkers</strong>
         </li>
