--- a/mods.html
+++ b/mods.html
@@ -694,7 +694,7 @@
             <strong>MovingMoonSA</strong>
         </li>
 	<li>
-            <strong>MovingSirenLightsSA</strong>
+            <strong>MovingSirenLightsSA v1.1</strong>
         </li>
         <li>
             <strong>Multiplemarkers</strong>
