--- a/mods.html
+++ b/mods.html
@@ -793,7 +793,7 @@
             <strong>Weapon Recoil RE</strong>
         </li>
         <li>
-            <strong>Wheel Cam from VC</strong>
+            <strong>Wheel Cam from VC v1.0</strong>
         </li>
     </ul>
 	<div class="button-container" style="text-align: center;">
