--- a/mods.html
+++ b/mods.html
@@ -622,7 +622,7 @@
             <strong>First Person Mod</strong>
         </li>
         <li>
-            <strong>Fix Damage From Explosions Through Walls</strong>
+            <strong>Fix Damage From Explosions Through Walls v1.0</strong>
         </li>
 	<li>
             <strong>Fixed dialogues with gangs</strong>
