--- a/mods.html
+++ b/mods.html
@@ -1274,7 +1274,7 @@
             <strong>Voodoo Physics Fix</strong>
         </li>
         <li>
-            <strong>Wheel Bump Sound</strong>
+            <strong>Wheel Bump Sound v1.0</strong>
         </li>
         <li>
             <strong>Wheel Detach</strong>
