--- a/mods.html
+++ b/mods.html
@@ -688,7 +688,7 @@
             <strong>Model Variations v9.9</strong>
         </li>
         <li>
-            <strong>Money Messages</strong>
+            <strong>Money Messages v1.1</strong>
         </li>
         <li>
             <strong>MovingMoonSA</strong>
