--- a/mods.html
+++ b/mods.html
@@ -594,6 +594,9 @@
 	<li>
             <strong>Cheat Menu v3.52</strong>
         </li>
+	<li>
+            <strong>Cigarette and Antenna</strong>
+        </li>
         <li>
             <strong>ClassicHud</strong>
         </li>
