--- a/mods.html
+++ b/mods.html
@@ -621,6 +621,9 @@
         <li>
             <strong>Fires & Flames</strong>
         </li>
+	 <li>
+            <strong>Fires and lights</strong>
+        </li>
         <li>
             <strong>First Person Mod</strong>
         </li>
