--- a/mods.html
+++ b/mods.html
@@ -784,10 +784,10 @@
             <strong>VC Markers SA</strong>
         </li>
         <li>
-            <strong>VC Particles</strong>
+            <strong>VCParticles v1.0.1</strong>
         </li>
         <li>
-            <strong>VC Stuff SA</strong>
+            <strong>VCStuffSA</strong>
         </li>
         <li>
             <strong>V Hud</strong>
