--- a/mods.html
+++ b/mods.html
@@ -724,7 +724,7 @@
             <strong>Rain Extinguish Fire</strong>
         </li>
         <li>
-            <strong>Rainbow With All the Colors</strong>
+            <strong>Rainbow With All the Colors v1.0</strong>
         </li>
         <li>
             <strong>ASI Real Time</strong>
