--- a/mods.html
+++ b/mods.html
@@ -576,6 +576,9 @@
         <li>
             <strong>Black Roads Fix</strong>
         </li>
+	<li>
+            <strong>Blur effect for club</strong>
+        </li>
         <li>
             <strong>Blur Effect For Stick</strong>
         </li>
