--- a/mods.html
+++ b/mods.html
@@ -784,7 +784,7 @@
             <strong>VC Bullet Trails</strong>
         </li>
         <li>
-            <strong>VC Markers SA</strong>
+            <strong>VCMarkersSA</strong>
         </li>
         <li>
             <strong>VCParticles v1.0.1</strong>
