--- a/mods.html
+++ b/mods.html
@@ -700,7 +700,7 @@
             <strong>Money Messages v1.1</strong>
         </li>
         <li>
-            <strong>MovingMoonSA</strong>
+            <strong>MovingMoon v1.1</strong>
         </li>
 	<li>
             <strong>MovingSirenLightsSA v1.1</strong>
