--- a/mods.html
+++ b/mods.html
@@ -682,7 +682,7 @@
             <strong>JetPack Hover Mode Fix</strong>
         </li>
         <li>
-            <strong>LaserScopeDotVC</strong>
+            <strong>LaserScopeDotVC v1.0.2</strong>
         </li>
         <li>
             <strong>Light on Bullet Impact</strong>
