--- a/mods.html
+++ b/mods.html
@@ -780,6 +780,9 @@
         <li>
             <strong>VC Plane Trails And Banners</strong>
         </li>
+	<li>
+            <strong>VCBannersAndTrails v1.0.1</strong>
+        </li>
         <li>
             <strong>VC Bullet Trails</strong>
         </li>
