--- a/mods.html
+++ b/mods.html
@@ -661,7 +661,7 @@
             <strong>Graffiti Anywhere</strong>
         </li>
         <li>
-            <strong>GTA III Pager</strong>
+            <strong>Pager from GTA 3 v1.0</strong>
         </li>
         <li>
             <strong>HeliFix</strong>
