--- a/mods.html
+++ b/mods.html
@@ -784,7 +784,7 @@
             <strong>VCBannersAndTrails v1.0.1</strong>
         </li>
         <li>
-            <strong>VC Bullet Trails</strong>
+            <strong>VCBulletTrails v1.2</strong>
         </li>
         <li>
             <strong>VCMarkersSA</strong>
