--- a/mods.html
+++ b/mods.html
@@ -583,7 +583,7 @@
             <strong>Blur Effect For Stick</strong>
         </li>
         <li>
-            <strong>BodyOutlinesSA</strong>
+            <strong>BodyOutlinesSA v1.0</strong>
         </li>
         <li>
             <strong>Bullethole</strong>
