--- a/mods.html
+++ b/mods.html
@@ -592,7 +592,7 @@
             <strong>Camera Point Fix</strong>
         </li>
         <li>
-            <strong>Camera shaking v1.1</strong>
+            <strong>Camera shaking at high speeds v1.1</strong>
         </li>
 	<li>
             <strong>Cheat Menu v3.52</strong>
