--- a/mods.html
+++ b/mods.html
@@ -1029,7 +1029,7 @@
             <strong>Gear Control</strong>
         </li>
         <li>
-            <strong>GPS Redux</strong>
+            <strong>GPS Redux v1.4.6</strong>
         </li>
         <li>
             <strong>GTA V to SA Burnout RRMS Edition</strong>
