--- a/mods.html
+++ b/mods.html
@@ -577,6 +577,9 @@
             <strong>Black Roads Fix</strong>
         </li>
 	<li>
+            <strong>Blip Size</strong>
+        </li>
+	<li>
             <strong>Blur effect for club</strong>
         </li>
         <li>
