--- a/mods.html
+++ b/mods.html
@@ -2137,6 +2137,9 @@
         <li>
             <strong>Ped Fire Fix</strong>
         </li>
+	<li>
+            <strong>Ped Interior Light Fix v1.0</strong>
+        </li>
         <li>
             <strong>Ped Money Tweaker</strong>
         </li>
