--- a/mods.html
+++ b/mods.html
@@ -577,7 +577,7 @@
             <strong>Black Roads Fix</strong>
         </li>
 	<li>
-            <strong>Blip Size</strong>
+            <strong>Blip Size v1.1</strong>
         </li>
 	<li>
             <strong>Blur effect for club</strong>
