--- a/mods.html
+++ b/mods.html
@@ -923,6 +923,9 @@
         <li>
             <strong>CarCrashCameraEffect</strong>
         </li>
+	<li>
+            <strong>CarHP</strong>
+        </li>
         <li>
             <strong>Cars Driving To The Challenge</strong>
         </li>
