--- a/mods.html
+++ b/mods.html
@@ -1692,7 +1692,7 @@
             <strong>Lamppost Insects</strong>
         </li>
 	<li>
-            <strong>Lampposts FX</strong>
+            <strong>Lampposts FX v1.1</strong>
         </li>
         <li>
             <strong>Leviathan</strong>
