--- a/mods.html
+++ b/mods.html
@@ -2010,7 +2010,7 @@
             <strong>Weapon Dealer</strong>
         </li>
         <li>
-            <strong>Weapon Detaills v3.1</strong>
+            <strong>Weapon Detaills Update v3.1 (30.03.2025)</strong>
         </li>
         <li>
             <strong>weapon pickup</strong>
