--- a/mods.html
+++ b/mods.html
@@ -2019,7 +2019,7 @@
             <strong>Weapon Pickup Maker Update (1/3/2025)</strong>
         </li>
         <li>
-            <strong>Weapon Zoom Unlimited</strong>
+            <strong>Weapon Zoom Unlimited Update v.25.03.30</strong>
         </li>
 	<li>
             <strong>WeaponRecoilAuto</strong>
