--- a/mods.html
+++ b/mods.html
@@ -1823,6 +1823,9 @@
         <li>
             <strong>Reload Mod</strong>
         </li>
+	<li>
+            <strong>Restore Original Mouse Sensibility</strong>
+        </li>
         <li>
             <strong>Restore Stealth Voices</strong>
         </li>
