--- a/mods.html
+++ b/mods.html
@@ -613,7 +613,7 @@
             <strong>Disable Radar On Foot</strong>
         </li>
         <li>
-            <strong>Enterable Hidden Interiors Update (12.03.25) v.2</strong>
+            <strong>Enterable Hidden Interiors Update (30/03/25)</strong>
         </li>
         <li>
             <strong>Explosions</strong>
