--- a/urbanize.html
+++ b/urbanize.html
@@ -472,9 +472,22 @@
     <li>Исправлены самолеты, врезавшиеся в ветряную электростанцию.</li>
     <li>Добавлено 500 мусорных мешков по всему San Fierro</li>
     </ul>
-   <a href="https://sharemods.com/wrzkprnny1o4/SA_-_Urbanize_01-25___40_c3algqn6bo__41_.zip.html" target="_blank">
+</div>		
+
+<div class="video-item">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/32NzuUild74" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <p>Версия 04-25</p>
+    <h4>Новые изменения в Urbanize</h4>
+    <ul class="location-list">
+    <li>Добавлено 27 локаций с охранниками, охраняющими двери по всему San Andreas (пассивно-агрессивные).</li>
+    <li>Добавлено 30 частных охранников, патрулирующих районы по всему San Andreas (пассивно-агрессивные).</li>
+    <li>Реализовал свой мод « Peds Buy Food », теперь он лучше, полнее и оптимизированнее.</li>
+    <li>Исправлены ошибки и добавлен API для помощи сторонним моддерам с утилитами и исправлениями конфликтов.</li>
+    <li>Добавлено 500 мусорных мешков по всему Las Venturas.</li>
+    </ul>
+   <a href="https://sharemods.com/oqtzkmk3k7fs/SA_-_Urbanize_02-25___40_c91djlv8a__41_.zip.html" target="_blank">
         <button style="padding: 10px 20px; font-size: 16px; background-color: #ff9933; color: white; border: none; border-radius: 5px; cursor: pointer;">
-            Скачать Urbanize 02-25
+            Скачать Urbanize 04-25
         </button>
     </a>
 </div>		
