--- a/mods.html
+++ b/mods.html
@@ -2237,7 +2237,7 @@
             <strong>Total Peds 2</strong>
         </li>
         <li>
-            <strong>Urbanize Project v02-25</strong>
+            <strong>Urbanize Project Version 04-25</strong>
         </li>
         <li>
             <strong>Wang Cars Peds</strong>
