--- a/mods.html
+++ b/mods.html
@@ -1662,7 +1662,7 @@
             <strong>Improved Club</strong>
         </li>
         <li>
-            <strong>Improved Gangs War</strong>
+            <strong>Improved Gangs War v1.1</strong>
         </li>
         <li>
             <strong>Improved Jetpack Control</strong>
