--- a/mods.html
+++ b/mods.html
@@ -254,7 +254,7 @@
 	<li>
             <strong>Original Peds Vary Extended (Fixed)</strong>
             <div class="button-container" style="text-align: center;">
-                <a href="https://mega.nz/file/nRVgnTLB#jmsAsGraClYNsBXadJpVO5NpE1FK20SsXdmrw_C-Icw" class="download-btn">Download Original Peds Vary Extended (Fixed)</a>
+                <a href="https://mega.nz/file/bcNhCZxB#F_q9RRjhFC-DR-ribiLqKJSPaVDDhiywWjCi9NWy57s" class="download-btn">Download Original Peds Vary Extended (Fixed)</a>
             </div>
         </li>
         <li>
