--- a/mods.html
+++ b/mods.html
@@ -1398,7 +1398,7 @@
             <strong>Auto Remove Marker</strong>
         </li>
         <li>
-            <strong>Autosave & Checkpoint</strong>
+            <strong>Autosave & Checkpoint v1.1</strong>
         </li>
 	<li>
             <strong>Ballas Greet You</strong>
