--- a/mods.html
+++ b/mods.html
@@ -1712,6 +1712,9 @@
         <li>
             <strong>Manhunt Sneak Kills</strong>
         </li>
+	<li>
+            <strong>Mission Balancing Tool</strong>
+        </li>
         <li>
             <strong>Mod Suck Rolls For 50 Stories</strong>
         </li>
