--- a/mods.html
+++ b/mods.html
@@ -1845,7 +1845,7 @@
             <strong>Rusty Brown's Ring Donuts</strong>
         </li>
 	<li>
-            <strong>RZL-Trainer v5.B3.1</strong>
+            <strong>RZL-Trainer v5.0.0</strong>
         </li>
         <li>
             <strong>SA Homies Mod</strong>
