--- a/mods.html
+++ b/mods.html
@@ -1713,7 +1713,7 @@
             <strong>Manhunt Sneak Kills</strong>
         </li>
 	<li>
-            <strong>Mission Balancing Tool</strong>
+            <strong>Mission Balancing Tool Update v.(25.04.18)</strong>
         </li>
         <li>
             <strong>Mod Suck Rolls For 50 Stories</strong>
