--- a/urbanize.html
+++ b/urbanize.html
@@ -485,9 +485,27 @@
     <li>Исправлены ошибки и добавлен API для помощи сторонним моддерам с утилитами и исправлениями конфликтов.</li>
     <li>Добавлено 500 мусорных мешков по всему Las Venturas.</li>
     </ul>
-   <a href="https://sharemods.com/oqtzkmk3k7fs/SA_-_Urbanize_02-25___40_c91djlv8a__41_.zip.html" target="_blank">
+</div>		
+
+<div class="video-item">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/OdReqZihOBE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <p>Версия 05-25</p>
+    <h4>Новые изменения в Urbanize</h4>
+    <ul class="location-list">
+    <li>Добавлено 12 частных шоферов, работающих по всему San Andreas.</li>
+    <li>Люди в баре в Восточном Los Santos.</li>
+    <li>Люди в обсерватории Los Santos.</li>
+    <li>Люди на пирсе Ocean Flats в San Fierro.</li>
+    <li>Посетители ресторана Fort Carson Ravine.</li>
+    <li>Люди в ресторане в ущелье Las Payasadas.</li>
+    <li>Люди на ранчо Valle Ocultado.</li>
+    <li>На собраниях банд теперь можно появляться с бейсбольной битой в руках.</li>
+    <li>Исправлена ​​ошибка, из-за которой велосипеды не отображались в баре Гантона.</li>
+    <li>Добавлено 450 столбовых светильников в Los Santos.</li>
+    </ul>
+   <a href="https://sharemods.com/pcmkb3gf1810/SA_-_Urbanize_03-25___40_cagxd44zh1jc__41_.zip.html" target="_blank">
         <button style="padding: 10px 20px; font-size: 16px; background-color: #ff9933; color: white; border: none; border-radius: 5px; cursor: pointer;">
-            Скачать Urbanize 04-25
+            Скачать Urbanize 05-25
         </button>
     </a>
 </div>		
