--- a/mods.html
+++ b/mods.html
@@ -1811,6 +1811,9 @@
         <li>
             <strong>Random Train Drivers</strong>
         </li>
+	<li>
+            <strong>Real Multiple Protagonists 2.0</strong>
+        </li>
         <li>
             <strong>Real Time</strong>
         </li>
