--- a/mods.html
+++ b/mods.html
@@ -1283,7 +1283,10 @@
             <strong>Vehicle Flags Changer v1.1</strong>
         </li>
         <li>
-            <strong>Vehicle Immunities</strong>
+            <strong>Vehicle Immunities v0.6</strong>
+        </li>
+	<li>
+            <strong>Void Radio Wheel</strong>
         </li>
         <li>
             <strong>Voodoo Physics Fix</strong>
