--- a/mods.html
+++ b/mods.html
@@ -1995,7 +1995,7 @@
             <strong>VCS&LCS Side Missions</strong>
         </li>
         <li>
-            <strong>Void Weapon Wheel</strong>
+            <strong>Void Weapon Wheel v1.3</strong>
         </li>
         <li>
             <strong>VoidRadioWheel</strong>
