--- a/mods.html
+++ b/mods.html
@@ -890,6 +890,9 @@
         <li>
             <strong>Car Crash Inertia</strong>
         </li>
+	<li>
+            <strong>Car Dealer</strong>
+        </li>
         <li>
             <strong>Car Dealership</strong>
         </li>
