--- a/mods.html
+++ b/mods.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+	
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Grand Theft Auto: San Andreas — игра, в которой Карл Джонсон возвращается в родной город и начинает борьбу за семью и свою честь. Скачать игру и узнать секреты.»">
     <meta property="og:title" content="Grand Theft Auto: San Andreas">
@@ -1948,6 +1949,9 @@
         </li>
         <li>
             <strong>Store Expulsion</strong>
+        </li
+	        <li>
+            <strong>Stories Sprinting Fix</strong>
         </li>
 	<li>
             <strong>Stowaway Mission Weapons Fix</strong>
