--- a/mods.html
+++ b/mods.html
@@ -1084,7 +1084,7 @@
             <strong>Luxury Cars Attract The Attention Of Pedestrians</strong>
         </li>
         <li>
-            <strong>Manual Driveby Refixed Update v.25.04.14</strong>
+            <strong>Manual Driveby Refixed Update v.25.05.22</strong>
         </li>
         <li>
             <strong>Manual DriveBy Remake</strong>
@@ -1720,7 +1720,7 @@
             <strong>Manhunt Sneak Kills</strong>
         </li>
 	<li>
-            <strong>Mission Balancing Tool Update v.(25.04.18)</strong>
+            <strong>Mission Balancing Tool Update v.25.05.22</strong>
         </li>
         <li>
             <strong>Mod Suck Rolls For 50 Stories</strong>
@@ -2038,7 +2038,7 @@
             <strong>Weapon Pickup Maker Update (4/4/2025)</strong>
         </li>
         <li>
-            <strong>Weapon Zoom Unlimited Update v.25.03.30</strong>
+            <strong>Weapon Zoom Unlimited Update v.25.05.22</strong>
         </li>
 	<li>
             <strong>WeaponRecoilAuto</strong>
