--- a/mods.html
+++ b/mods.html
@@ -614,7 +614,7 @@
             <strong>Disable Radar On Foot</strong>
         </li>
         <li>
-            <strong>Enterable Hidden Interiors Update 25.05.25</strong>
+            <strong>Enterable Hidden Interiors v4.3 Update 25.05.25</strong>
         </li>
         <li>
             <strong>Explosions</strong>
