--- a/urbanize.html
+++ b/urbanize.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header>
-        <h1>[SA] Urbanize</h1>
+        <h1>[SA] Urbanize (environmental NPCs)</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -503,9 +503,20 @@
     <li>Исправлена ​​ошибка, из-за которой велосипеды не отображались в баре Гантона.</li>
     <li>Добавлено 450 столбовых светильников в Los Santos.</li>
     </ul>
-   <a href="https://sharemods.com/pcmkb3gf1810/SA_-_Urbanize_03-25___40_cagxd44zh1jc__41_.zip.html" target="_blank">
+</div>		
+
+<div class="video-item">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/eMinQw4Otdc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <p>Версия 06-25</p>
+    <h4>Новые изменения в Urbanize</h4>
+    <ul class="location-list">
+    <li>Добавлено 9 локаций с внедорожными трассами: для МТБ, мотокросса или квадроциклов, по-разному, обычно парами. Он заменяет старых велосипедистов на горе Chiliad, предлагая больше вариаций и более длинные маршруты. Обновите свой Helmet Mod , чтобы починить шлем для мотокросса.</li>
+    <li>Добавлено 9 мест, где можно увидеть людей с горными или кроссовыми велосипедами, а также путешественников/туристов.</li>
+    <li>Добавлено 400 столбовых светильников в San Fierro.</li>
+    </ul>
+   <a href="https://sharemods.com/f83p90oqa5bx/SA_-_Urbanize_04-25___40_ceh7avvb134__41_.zip.html" target="_blank">
         <button style="padding: 10px 20px; font-size: 16px; background-color: #ff9933; color: white; border: none; border-radius: 5px; cursor: pointer;">
-            Скачать Urbanize 05-25
+            Скачать Urbanize 06-25
         </button>
     </a>
 </div>		
