--- a/mods.html
+++ b/mods.html
@@ -1864,7 +1864,7 @@
             <strong>SA Sonic Adventure 2</strong>
         </li>
         <li>
-            <strong>SA switch weapon</strong>
+            <strong>SA switch weapon v1.2</strong>
         </li>
         <li>
             <strong>SACamFX</strong>
